# Baseball-Pitch-Sequence-Prediction

./: .gitignore  404.html  AutoGluon_Baseball_Pitch_Outcome_Prediction.ipynb  AutoGluon_Baseball_Pitch_Prediction.ipynb  Baseball_Pitch_Sequence_Simulator.ipynb  CITATION.cff  CLAUDE.md  HMM_Pitch_Predictor.ipynb  LSTM_Pitch_Predictor.ipynb  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
api/: index.html
api/cli/: index.html
api/config/: index.html
api/models/: index.html
api/paths/: index.html
cli-reference/: index.html
configs/: benchmark.yaml
configs/models/: autogluon.yaml  cnn1d.yaml  hmm.yaml  random_forest.yaml
configuration/: index.html
data/: synthetic_pitch_sequences.csv
docs/: cli-reference.md  configuration.md  index.md  notebooks.md
docs/api/: cli.md  config.md  index.md  paths.md
docs/getting-started/: installation.md  quickstart.md
docs/models/: autogluon.md  cnn1d.md  hmm.md  index.md  logistic-regression.md  lstm.md  random-forest.md  transformer.md
docs/user-guide/: ablation.md  benchmarking.md  data-pipeline.md  mlflow.md  training.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
models/: index.html
models/autogluon/: index.html
models/cnn1d/: index.html
notebooks/: AutoGluon_Baseball_Pitch_Outcome_Prediction.ipynb  AutoGluon_Baseball_Pitch_Prediction.ipynb  Baseball_Pitch_Sequence_Simulator.ipynb  HMM_Pitch_Predictor.ipynb  LSTM_Pitch_Predictor.ipynb  index.html
scripts/: ablation.py  benchmark.py  generate_data.py  train.py
search/: search_index.json
tests/: test_models.py  test_preprocessing.py  test_simulator.py
(+68 files in other folders)
