[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pitch-sequencing"
version = "0.1.0"
description = "Baseball pitch sequence prediction and analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "John Hodge"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.2",
    "torch>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pyyaml>=6.0",
    "mlflow>=2.10",
]

[project.optional-dependencies]
autogluon = ["autogluon>=1.0"]
hmm = ["hmmlearn>=0.3"]
all = ["autogluon>=1.0", "hmmlearn>=0.3"]
dev = ["pytest>=7.0", "build"]

[project.urls]
Homepage = "https://github.com/johnhodge/Baseball-Pitch-Sequence-Prediction"
Repository = "https://github.com/johnhodge/Baseball-Pitch-Sequence-Prediction"

[project.scripts]
pitch-generate = "pitch_sequencing.cli:generate_main"
pitch-train = "pitch_sequencing.cli:train_main"
pitch-benchmark = "pitch_sequencing.cli:benchmark_main"
pitch-ablation = "pitch_sequencing.cli:ablation_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pitch_sequencing = ["configs/*.yaml", "configs/models/*.yaml"]
